# Fastapi-pbl

./: .gitignore  README.md  components.json  index.html  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.ts  test.db  tsconfig.node.json  vite.config.ts
app/: app.py  auth.py  database.py  db.py  dependencies.py  images.py  main.py  models.py  schemas.py  users.py
app/routers/: auth.py  posts.py  users.py
app/services/: imagekit_service.py
src/: index.css  main.tsx
src/api/: axios.ts  query-client.ts
src/components/common/: confirmation-dialog.tsx  empty-state.tsx  error-state.tsx  loading-spinner.tsx  logo.tsx  skeleton-loader.tsx  theme-toggle.tsx
src/components/layout/: mobile-bottom-nav.tsx  navbar.tsx  sidebar.tsx
src/components/post/: image-upload.tsx  post-card.tsx
src/components/profile/: user-avatar.tsx  user-info-card.tsx
src/components/ui/: alert-dialog.tsx  avatar.tsx  badge.tsx  button.tsx  card.tsx  input.tsx  label.tsx  textarea.tsx  toaster.tsx
src/hooks/: use-auth.tsx  use-current-user.ts  use-posts.ts  use-theme.tsx
src/layouts/: app-layout.tsx  auth-layout.tsx
src/pages/CreatePost/: index.tsx
src/pages/EditProfile/: index.tsx
src/pages/Feed/: index.tsx
src/pages/Login/: index.tsx
src/pages/NotFound/: index.tsx
src/pages/Profile/: index.tsx
src/pages/Register/: index.tsx
src/routes/: router.tsx
src/services/: auth.service.ts  posts.service.ts  users.service.ts
src/types/: auth.ts  post.ts  user.ts
src/utils/: format.ts  storage.ts
